# test-parallelisation-BMI

./: Dockerfile  README.md  pyproject.toml
src/parallelisation_sleep/: __init__.py  lumped_bmi.py  parallelisation_sleep_bmi.py
