[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parallelisation_sleep"
description = "Model with sleeps to test parallelisation for BMI for eWaterCycle."
license = "Apache-2.0"
version = "0.0.1"
authors = [
  { name = "David Haasnoot", email = "davidhaasnoot@gmail.com" },
]

# Include here only the dependencies for the BMI Model
# This is used to run the BmiModel inside the container
dependencies = [
  "bmipy",
  "numpy",
  "xarray",
  "netcdf4",
]
